--- a/app/views/user_applications/index.html.haml
+++ b/app/views/user_applications/index.html.haml
@@ -2,15 +2,7 @@
   %h1 Your Dashboard For All Your Applications
   %p Here we may have a blurb about all your applications
 
-.row
-  .span4
-    %h2 Tidbits about App1
-    %p
-      LINK TO Your apps!
-      %a{href: user_application_path(1)} App #1
-  .span4
-    %h2 Latest About Your App #2!
-    %p Your app details!
-  .span4
-    %h2 Latest About App #3!
-    %p Your apps!
+- @user_applications.each do |app|
+  .row
+    %h2
+      %a{href: user_application_path(app)}= app.name
