--- a/app/views/user_applications/show.html.haml
+++ b/app/views/user_applications/show.html.haml
@@ -10,7 +10,7 @@
     %p
       %a{href: deployment_path(deployment)} View Latest
 
-- @user_application.time_buckets.each do |time_bucket|
+- @user_application.time_buckets.sort_by {|tb| -1 * tb.created_at.to_i }.each do |time_bucket|
   .row
     %h2= time_bucket.created_at
     %h3 Requests
