EPIC COMMIT! Auth and Vanity Pages
![My Reaction to this Commit](http://i.imgur.com/F9AEB.gif)

Added authentication via devise. Created a user model. Now you have to
be authenticated if you want to use the user_application controller at
all.

Wanted to have unauthenticated pages to look at as well, so the easiest
thing was to make a new "Static" controller and dropped in a couple of
views there--the home and about pages.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,10 +13,21 @@ html
           a.brand Truestack.com
           .nav-collapse
             ul.nav
+              / TODO: Need to get the active class on the right element here:
               li.active
                 a href='/' home
               li
                 a href=(user_applications_path) apps
+              li
+                = link_to "about", about_path
+    - unless flash.empty?
+      .container
+        .content
+          .row
+            - flash.each do |name, msg|
+              div class="alert alert-#{ name == :notice ? "success" : "error"}"
+                a.close data-dismiss="alert"
+                = msg
     .container
       = yield
 
