--- a/app/views/static/home.html.slim
+++ b/app/views/static/home.html.slim
@@ -1,2 +1,6 @@
-h1 Static#home
-p Find me in app/views/static/home.html.haml
+#home.hero-unit
+  h1 How does your app stack up?
+  p Truestack shows you -- in the simplest way possible -- where to spend your time refactoring.
+  p
+    a.btn.btn-primary.btn-large href=(new_user_registration_path) Sign up and find out!
+
