--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype 5
 html
   head
     title Truestack
-    = stylesheet_link_tag    "screen", :media => "screen, projection"
+    = stylesheet_link_tag    "application", :media => "screen, projection"
     = stylesheet_link_tag    "print", :media => "print"
     = javascript_include_tag "application"
     = csrf_meta_tags
