Cleanup duplicate old admin stuff.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,13 +18,8 @@ html
           .nav-collapse
             ul.nav.pull-right
               - if (current_user && current_user.role?(:admin))
-                li.dropdown
-                  a.dropdown-toggle data-toggle==('dropdown') href='#'
-                    | Admin
-                    b.caret
-                  ul.dropdown-menu
-                    li
-                      a href=(admin_users_path) Users
+                li
+                  a href=(rails_admin_path) Admin
               - if user_signed_in?
                 li
                   = link_to 'Log Out', destroy_user_session_path, method: :delete
