I don't wanna to hear about no none SVG silliness
I tried using an embed tag, but that didn't scale properly. So the img
tag happens to be styled very nicely by chrome....

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,3 +26,8 @@ body { padding-top: 60px; }
 .brand-logo {
   float: left;
   }
+img.truestack-logo {
+  height: 25px;
+  float: left;
+  padding: 5px;
+}
