Asset pipeline to process svg files, fun

--- a/app/views/layouts/signups.html.erb
+++ b/app/views/layouts/signups.html.erb
@@ -265,7 +265,7 @@ left: 20px;
   <body>
     <header>
     <div class="masthead">
-      <img class="masthead-truestack-logo" src="assets/truestack-logo.svg" type="image/svg+xml">
+      <img class="masthead-truestack-logo" src="assets/truestack-logo-dyn-color.svg" type="image/svg+xml">
       <div  class="masthead-copy">
         <div class="name">Truestack</div>
         Learn how your rails app stacks up, and where it breaks down.
