--- a/app/views/signups/_form.html.slim
+++ b/app/views/signups/_form.html.slim
@@ -3,6 +3,6 @@
 
   .form-inputs
     h3 Signup to get email notifications when we launch
-    = f.input :email_address, :label => false , :placeholder => 'Email Address'
+    = f.input :email_address, :label => false , :placeholder => 'Email Address', :required => true, :input_html => {:type => "email"}
     = f.button :submit, "Sign Up", :id => "stupid", :class => "awesome"
     p We won't do anything nasty with your email like share it for anyone. It will only be used to send your updates about Truestack.
