Adding font-awesome, because it is rad

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 
 @import "bootswatch/simplex/variables";
 @import "bootstrap";
+@import 'font-awesome';
 
 // Bootstrap body padding for fixed navbar
 body { padding-top: 60px; }
