--- a/app/views/layouts/signups.html.erb
+++ b/app/views/layouts/signups.html.erb
@@ -6,13 +6,18 @@
     <meta name="description" content="Discover how your app stacks up with truestack" />
     <style type="text/css">
 
-@font-face{
-  font-family: "monofur";
-  src: url('/assets/fonts/monofur.eot');
-  src: local("monofur"), url('/assets/fonts/monofur.ttf') format("truetype");
+@font-face {
+    font-family: 'monofurRegular';
+    src: url('/fonts/monofur-webfont.eot');
+    src: url('/fonts/monofur-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/monofur-webfont.woff') format('woff'),
+         url('/fonts/monofur-webfont.ttf') format('truetype'),
+         url('/fonts/monofur-webfont.svg#monofurRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 .monofur {
-  font-family: "monofur";
+  font-family: "monofurRegular";
 }
 
 
@@ -216,7 +221,7 @@
       .masthead-copy .name {
         font-size:95px;
         font-weight:bolder;
-        font-family: "monofur";
+        font-family: "monofurRegular";
         451a00
         color: #384a56
         color: #451a00;
