Bring in hot new colors for signup layout

--- a/app/views/layouts/signups.html.erb
+++ b/app/views/layouts/signups.html.erb
@@ -33,7 +33,7 @@
 
       /* set an awesome color for the buttons, feel free to add new colors like an .awesome.green or .awesome.secondary */
       .awesome {
-        background-color: #f90 !important;
+        background-color: #F23F3F !important;
         color: #fff !important;
       }
 
@@ -136,14 +136,14 @@
 
       body, html {
         padding: 0; margin: 0; font-family: Helvetica, Geneva, Arial, sans-serif;
-        background: url(/assets/signups_background.png);
+        /*background: url(/assets/signups_background.png);*/
+        background-color: #E7E1D4;
 
       }
       .focus { width: 770px; margin: 0 auto; position: relative; }
       header {
         background: #451a00;
-        background: #384a56
-        background: #717867;
+        background: #3D4C53;
         font-size: 3em
         overflow: hidden;
         margin: 0;
@@ -152,7 +152,7 @@
       }
       h2 { clear: both }
       footer {
-        background: #444;
+        background: #3D4C53;
         color: #fff;
         margin: 0;
         padding: 1em;
@@ -161,7 +161,7 @@
       blockquote {
         color: #303A41;
         padding: 0.2em 0.5em;
-        background: #BECCD5;
+        background: white;
         font-size: 1.3em;
         font-family: Georgia, Times, serif;
         border-radius: 9px;
@@ -202,7 +202,7 @@
       .masthead {
         height: 250px;
         width:650px;
-        margin: 0 auto;
+        margin: 20px auto 0;
 
       }
       .masthead-truestack-logo {
@@ -213,20 +213,17 @@
       .masthead-copy {
         padding: 20px;
         float:left;
-        width:440px;
+        width:445px;
         text-align: left;
-        font-size:30px;
-        color: #A26A49;
+        font-size:22px;
+        color: #E7E1D4;
+        font-size:20px;
       }
       .masthead-copy .name {
         font-size:95px;
         font-weight:bolder;
         font-family: "monofurRegular";
-        451a00
-        color: #384a56
-        color: #451a00;
-        color:white;
-        color: #E6E6E6;
+        color: #6FB7BA;
       }
       p { line-height: 1.3 }
       form {
@@ -263,7 +260,7 @@ left: 20px;
       .form-inputs {
         color: #303A41;
         padding: 0.2em 0.5em;
-        background: #BECCD5;
+        background: white;
         font-family: Georgia, Times, serif;
         border-radius: 9px;
         width: 670px;
