--- a/app/assets/images/truestack-logo-dyn-color.svg.erb
+++ b/app/assets/images/truestack-logo-dyn-color.svg.erb
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<% fill_color = "#BECCD5" %>
-<% stroke_color = "#451A00" %>
+<% fill_color = "#3D4C53" %>
+<% stroke_color = "#6FB7BA" %>
 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
