Updating copy for the signup page

--- a/app/views/signups/_form.html.slim
+++ b/app/views/signups/_form.html.slim
@@ -2,7 +2,7 @@
   = f.error_notification
 
   .form-inputs
-    h3 Signup to get email notifications when we launch
+    h3 Signup to get early access to the Beta
     = f.input :email_address, :label => false , :placeholder => 'Email Address', :required => true, :input_html => {:type => "email"}
     = f.button :submit, "Sign Up", :id => "stupid", :class => "awesome"
-    p We won't do anything nasty with your email like share it for anyone. It will only be used to send your updates about Truestack.
+    p We won't do anything nasty with your email like share it for anyone. It will only be used to send you updates about Truestack.
