--- a/app/views/signups/new.html.slim
+++ b/app/views/signups/new.html.slim
@@ -3,11 +3,11 @@ section.pitch
     .signup-button.up-and-over
       a.awesome href="#signup" Sign up now
     h2 You can not afford to have a slow app
-    p Don't gamble on your business, if you wait until customers are having problems then it may already be too late. Stay ahead of the curve with Truestack's insight into your app. Don't risk loosing a single conversion because things are running slow, or worse, completely broken.
+    p Don't gamble on your business, if you wait until customers are having problems then it may already be too late. Stay ahead of the curve with Truestack's insight into your app. Don't risk losing a single conversion because things are running slow, or worse, completely broken.
     /!.aside
     /!  p Customer Quote because they love it!
     h2 Wouldn't it be so much better to know what is happening and focus on solving the problems before they become emergencies?
-    p If you have a good view into how your code is running and working together in production you can eliminate the problems before they arise. Truestack gives you exactly that, in a simple strait forward way. Add it to your site now.
+    p If you have a good view into how your code is running and working together in production you can eliminate the problems before they arise. Truestack gives you exactly that, in a simple straight-forward way. Add it to your site now.
     /!p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
     /!h2 Lorem ipsum dolor sit amet, consectetur adipisicing elit
     /!p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
@@ -25,4 +25,3 @@ section.pitch
 
     a name="signup"
     = render 'form'
-
