--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,6 +24,7 @@ html
               - if user_signed_in?
                 li
                   = link_to 'Log Out', destroy_user_session_path, method: :delete
+
               - else
                 li.pull-right
                   a href=(new_user_session_path) Log In
@@ -36,6 +37,15 @@ html
                 a.close data-dismiss="alert"
                 = msg
     .container
+      .subnav
+        - if current_user
+          = render :partial=>'shared/application_selector'
+        - if @current_user_application
+          h2
+            - if @current_user_application
+              = @current_user_application.name
+              a href=edit_user_application_path(@current_user_application.id)
+                = "Edit"
       = yield
 
       hr
