--- a/app/views/user_applications/index.html.slim
+++ b/app/views/user_applications/index.html.slim
@@ -1,15 +1,4 @@
 .hero-unit
   h1 The Dashboard For Your Apps
-  p Here we may have a blurb about all your applications
-
-- @user_applications.each do |app|
-  .row
-    h2
-      a href=(user_application_path(app)) = app.name
-
-.row
-  .span12
-    img src="http://placekitten.com/240/300"
-    img src="http://placekitten.com/245/300"
-    img src="http://placekitten.com/220/300"
-    img src="http://placekitten.com/255/300"
+  p
+    Here we may have a blurb about all your applications.
