--- a/app/views/user_applications/show.html.haml
+++ b/app/views/user_applications/show.html.haml
@@ -1,5 +1,9 @@
 .hero-unit
-  %p Here is the overview graph
+  %p
+    %textarea{:style=>'width:100%; height: 200px;'}
+      Here is the overview graph
+      = @slices.to_json
+
 
 %ul
   - @user_application.deployments.order_by([:tstart, :desc]).each do |depoyment|
