Management of user_apps pages, create/edit/show.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,7 +55,7 @@ img.truestack-logo {
       }
     }
     .btn-group.application-selector {
-      float: right;
+      display: inline-block;
     }
   }
 }
