--- a/app/views/collector_workers/show.html.haml
+++ b/app/views/collector_workers/show.html.haml
@@ -7,4 +7,4 @@
   %b Connection Count:
   = @collector_worker.connection_count
 
-= link_to 'Back', collector_workers_path
+= link_to 'Back', admin_collector_workers_path
