--- a/app/views/user_applications/edit.html.slim
+++ b/app/views/user_applications/edit.html.slim
@@ -1,30 +1,20 @@
-= form_for @user_application, :url => user_applications_path, :method => :put do |f|
-  fieldset
-    legend Edit
-    div class='control-group'
-      label class='control-label' for='field_name' App Name
-      div class='controls'
-        input type='text' class='input-xlarge' id='field_name' name='user_application[name]' value=@user_application.name
-    div class='form-actions'
-      button type='submit' class='btn btn-primary' Update
 .hero-unit
-  p
-    Here you can reset the access token
-    h1 = @user_application.access_token.key rescue "No Token"
-    = form_for @user_application, :url => app_reset_token_path(@user_application), :method => :post do |f|
-      button type='submit' class='btn btn-primary' Reset
+  = form_for @user_application, :url => app_path(@user_application), :method => :put do |f|
+    fieldset
+      legend Edit
+      div class='control-group'
+        label class='control-label' for='field_name' App Name
+        div class='controls'
+          input type='text' class='input-xlarge' id='field_name' name='user_application[name]' value=@user_application.name
+      div class='form-actions'
+        button type='submit' class='btn btn-primary' Update
+.hero-unit
+  Here you can reset the access token
+  h1 = @user_application.access_token.key rescue "No Token"
+  = form_for @user_application, :url => app_reset_token_path(@user_application), :method => :post do |f|
+    button type='submit' class='btn btn-primary' Reset
 
 .hero-unit
   p Just cut and paste this into your Rails app in config/truestack.yml and add the gem to your Gemfile
   pre
-    | truestack.yml
-    br
-    | Some
-    br
-    | nicely
-    br
-    | formatted
-    br
-    |  code
-    br
-    | key: #{@user_application.access_token.key rescue "No Token"}
+    = @user_application.example_config_file
