Fixed new app page.

--- a/app/views/user_applications/new.html.slim
+++ b/app/views/user_applications/new.html.slim
@@ -1,9 +1,8 @@
 .hero-unit
   p
-    Create a new user application
-    Fancy images
+    | Create a new user application
 
-= form_for :user_application, :url => user_applications_path do |f|
+= form_for :user_application, :url => apps_path do |f|
   fieldset
     legend Create A New User Application
     div class='control-group'
