fix index page for new link

--- a/app/views/user_applications/index.html.slim
+++ b/app/views/user_applications/index.html.slim
@@ -6,3 +6,6 @@
     - current_user.user_applications.each do |application|
       li
         a href=app_path(application.id) = application.name
+    h2
+      a href=new_app_path
+        Create New App
