--- a/app/views/user_applications/show.html.slim
+++ b/app/views/user_applications/show.html.slim
@@ -7,6 +7,13 @@ hr
 textarea style="width:100%;height:200px"
   = @slices.to_a.to_yaml
 
+/ Deployment times
+- deployment_slices = @deployments.map {|deploy| [ deploy.tstart, deploy.name ] }
+textarea style="width:100%;height:200px"
+  = deployment_slices.to_yaml
+/ Exception data
+
+- exception_slices = @time_slices.map {|slice| slice
 h2 Actions
 table class='table table-striped table-bordered table-condensed'
 
