--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -37,7 +37,7 @@ $purple:                #405A6A;
 
 // // Scaffolding
 // // -------------------------
-$bodyBackground:        $tsTan;
+$bodyBackground:        white;
 $textColor:             $tsDarkBlue;
 //
 // // Links
