--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,8 +4,9 @@ html
     title Truestack
     = stylesheet_link_tag    "application", :media => "screen, projection"
     = stylesheet_link_tag    "print", :media => "print"
-    = javascript_include_tag "application"
+    = javascript_include_tag "https://js.stripe.com/v1/", "application"
     = csrf_meta_tags
+    = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
   body
     .navbar.navbar-fixed-top
       .navbar-inner
