--- a/app/views/layouts/signups.html.erb
+++ b/app/views/layouts/signups.html.erb
@@ -137,7 +137,7 @@
       body, html {
         padding: 0; margin: 0; font-family: Helvetica, Geneva, Arial, sans-serif;
         /*background: url(/assets/signups_background.png);*/
-        background-color: #E7E1D4;
+        background-color: white;
 
       }
       .focus { width: 770px; margin: 0 auto; position: relative; }
@@ -156,7 +156,6 @@
         color: #fff;
         margin: 0;
         padding: 1em;
-        border: 1px solide #444;
       }
       blockquote {
         color: #303A41;
@@ -260,7 +259,7 @@ left: 20px;
       .form-inputs {
         color: #303A41;
         padding: 0.2em 0.5em;
-        background: white;
+        background: #E7E1D4;
         font-family: Georgia, Times, serif;
         border-radius: 9px;
         width: 670px;
@@ -279,6 +278,8 @@ left: 20px;
         font-size:30px;
         text-align: center;
       }
+
+
     </style>
   </head>
   <body>
