Purge data from application, and some more work on show page.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -39,7 +39,7 @@ html
       .subnav
         - if @current_user_application
           h2
-            = @current_user_application.name
+            a href=app_path(@current_user_application) = @current_user_application.name
             - if current_user
               = render :partial=>'shared/application_selector'
       = yield
